# DLA-Mutation

./: Licence  README.md  dla.yml
Data/: HADDOCK_487.csv  S2003  S2003_test  S2003_train  S391.csv
Embeddings/: do_t-SNE.py  testing_backrub.py  testing_backrub_4channels.py  testing_xray_4channels.py  transfer_learning_SCR.py  transfer_learning_aa_reducedalphabet.py  transfer_learning_aa_reducedalphabet_xray.py  transfer_learning_ddg_siamese.py  transfer_learning_function.py
Evaluation/: comp_mut_map_gemme_jet.pkl  do_analysis_t-SNE_PCA.py  test_ddg.py  test_xray.py  test_xray_4channels.py  testing_backrub.py  testing_backrub_4channels.py  testing_xray.py  transfer_learning_SCR_xray.py  transfer_learning_aa_reducedalphabet.py  transfer_learning_aa_reducedalphabet_xray.py  transfer_learning_function.py
Examples/: complex_list.txt
Models/DLA_Mutation_model_SCR/: saved_model.pb
Models/DLA_Mutation_model_SCR_GEMME/: saved_model.pb
Models/DLA_Mutation_model_SCR_TJET/: saved_model.pb
Models/ssDLA_model/: saved_model.pb
Models/ssDLA_model_4channels/: saved_model.pb
Pre-training/: bc-70.out  bc-90.out  calculate_class_weight.py  class_weights.pkl  pretraining_selfsupervised_classweights_4channels.py
Pre-training/4channels/: pretraining_selfsupervised_classweights.py  (+1 more)
Representation/: generate_cubes_ddg.py  generate_cubes_interface.py  generate_cubes_pdb_mask.py  generate_cubes_pdbbind_mask.py  generate_cubes_reduce_channels_multiproc.py
Representation/mapsGenerator_mask/: CMakeLists.txt  FILE_FORMAT.txt  README  resinfo  scrinfo  sh-featurizer-linux
Representation/mapsGenerator_mask/libs/proteins/: CMakeLists.txt  NeighbourSearch.cpp  NeighbourSearch.hpp  SolventGrid.cpp  SolventGrid.hpp  cAlgorithmTemplates.hpp  cAminoResidue.cpp  cAminoResidue.hpp  cAtom.cpp  cAtom.hpp  cCharmmParams.cpp  cCharmmParams.hpp  cClassicalParserPDB.cpp  cClassicalParserPDB.hpp  cGrid.cpp  cGrid.hpp  cIAVector3.cpp  cIAVector3.hpp  cInterval.cpp  cInterval.hpp  cMatrix33.cpp  cMatrix33.hpp  cMemoryPool.cpp  cMemoryPool.hpp  cPeriodicTable.cpp  cPeriodicTable.hpp  cProtein.cpp  cProtein.hpp  cProteinChain.cpp  cProteinChain.hpp  cProteinFeaturizer.cpp  cProteinFeaturizer.hpp  cProteinMapper.cpp  cProteinMapper.hpp  cResidue.cpp  cResidue.hpp  cRotamerLibrary.cpp  cRotamerLibrary.hpp  cSH.cpp  cSH.hpp  (+13 more)
Representation/mapsGenerator_mask/libs/tclap/: Arg.h
Representation/mapsGenerator_mask/src/: engine.cpp  engine.hpp  main.cpp
Test/: testing.py
Train/: pretraining_selfsupervised_classweights.py  pretraining_selfsupervised_classweights_4channels.py  siameseNet_nocommoncomp_largebatches.py
(+136 files in other folders)
