

set(proteins_source_files
  cVector3.cpp
  cVector3.hpp
  cMatrix33.cpp
  cMatrix33.hpp
  cIAVector3.cpp
  cIAVector3.hpp
  cInterval.cpp
  cInterval.hpp
  mathFunctions.cpp
  mathFunctions.hpp
  cAlgorithmTemplates.hpp
  cMemoryPool.cpp
  cMemoryPool.hpp
  cGrid.cpp
  cGrid.hpp
  cPeriodicTable.cpp
  cPeriodicTable.hpp
  cAtom.cpp
  cAtom.hpp
  cCharmmParams.cpp
  cCharmmParams.hpp
  cProtein.cpp
  cProtein.hpp
  cProteinChain.cpp
  cProteinChain.hpp
  cResidue.cpp
  cResidue.hpp
  cAminoResidue.cpp
  cAminoResidue.hpp
  cRotamerLibrary.cpp
  cRotamerLibrary.hpp
  cSparseMatrixOutput.cpp
  cSparseMatrixOutput.hpp
  cClassicalParserPDB.cpp
  cClassicalParserPDB.hpp
  energyModel.cpp
  energyModel.hpp
  cProteinFeaturizer.hpp
  cProteinFeaturizer.cpp
  cProteinMapper.hpp
  cProteinMapper.cpp
  hierarchical_iterator.hpp
  cSmoothedHistogram.hpp
  cSmoothedHistogram.cpp
  NeighbourSearch.hpp
  NeighbourSearch.cpp
  SolventGrid.hpp
  SolventGrid.cpp
  cSH.hpp
  cSH.cpp
  cSpatialTransform.hpp
  cSpatialTransform.cpp
)

add_library(proteins ${proteins_source_files})
